Update cdi-unit and add Java 9 profile for testing under JDK 9